# zero2prod-axum-v2

./: Cargo.toml  Dockerfile  README.md  spec.yaml
configuration/: local.yaml  production.yaml
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
