[package]
name = "zero2prod-axum-v2"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod_axum_v2"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
config = "0.15.9"
uuid = { version = "1.21.0", features = ["v4"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }
tower = "0.5"
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"]}
serde-aux = "4"
unicode-segmentation = "1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.13.2"
claims = "0.7"
